			  phpAdsPlus project by Stefan aka. dandra  (Niels)
			+ Added a confirmation dialogbox, for deleting and resetting statistics (Helmut Wirth)
			+ Added welcome message to the client interface, which can be modified
                          to include personal contact information for example  (Niels)
			+ Add secondary tab bar to the navigation  (Niels)

			+ Zones
			  - Added support for zones  (Niels)
			  - Zones can be linked from the banner  (Niels) 20011007
			
			+ ACLs
			  The ACL routines have been rewritten. This is a very big change and possibly
			  a change from previous behavoir. It is needed to check existing ACLs after
			  upgrading!!! The changes include:
			  - Ability to select multiple weekdays per ACL  (Niels)
			  - Ability to select multiple hours per ACL  (Niels)
			  - Added new ACL for accept-language headers  (Niels)
			  - Added boolean operators to ACLs  (Niels)
			  - Changed IP check, it is now possible to use * instead of a mask  (Niels)
			  - Removed mini-help on the bottom of the page  (Niels) 20011007
			  - Renamed ACL to Display Limitations  (Niels) 20011007 

			+ Added P3P Privacy Policies support
			  - Sending Policy location using P3P header  (Niels)
			  - Sending Compact Policy using P3P header for cookie evaluation  (Niels)

			+ Mailed reports
			  - Added starting and end date to the reports  (Niels)
			  - Campaigns without stats now tell there are no stats available  (Niels)
			  - Fixed bug which prevented reports for new clients from being sent  (Niels)
			  - First report for new clients now includes all stats up to date  (Niels)
			  - Fixed bug which prevented stats from the last day to be included
			    and which caused problems with a one day interval  (Niels)
			  - Changed mail headers as a workaround for Win32 SMTP extension bug  (Niels)
			  - Added ability to force a report from being sent from the Admin interface  (Niels)
			  - Added charset header to all mailed reports  (Niels) 20011007
