@@ -89,6 +89,7 @@ echo "<br><br>";
 
 
 
+
 /*********************************************************/
 /* Main code                                             */
 /*********************************************************/
@@ -111,9 +112,8 @@ if (phpAds_isUser(phpAds_Admin))
 		SELECT 
 			*
 		FROM 
-			$phpAds_tbl_clients
-		ORDER BY
-			parent, clientID
+			".$phpAds_tbl_clients."
+		".phpAds_getListOrder ($listorder)."
 		") or mysql_die();
 }
 else
@@ -122,12 +122,11 @@ else
 		SELECT 
 			*
 		FROM 
-			$phpAds_tbl_clients
+			".$phpAds_tbl_clients."
 		WHERE
 			clientID = ".$Session["clientID"]." OR
 			parent = ".$Session["clientID"]."
-		ORDER BY
-			parent, clientID
+		".phpAds_getListOrder ($listorder)."
 		") or mysql_die();
 }
 
@@ -156,7 +155,8 @@ $res_banners = db_query("
 		format,
 		active
 	FROM 
-		$phpAds_tbl_banners
+		".$phpAds_tbl_banners."
+		".phpAds_getBannerListOrder ($listorder)."
 	") or mysql_die();
 
 while ($row_banners = mysql_fetch_array($res_banners))
@@ -351,8 +351,8 @@ if (phpAds_isUser(phpAds_Admin))
 		echo "<table border='0' width='100%' cellpadding='0' cellspacing='0'>";	
 		
 		echo "<tr height='25'>";
-		echo "<td height='25'><b>&nbsp;&nbsp;".$GLOBALS['strName']."</b></td>";
-		echo "<td height='25'><b>".$GLOBALS['strID']."</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>";
+		echo '<td height="25"><b>&nbsp;&nbsp;<a href="'.$PHP_SELF.'?listorder=name">'.$GLOBALS['strName'].'</a></b></td>';
+		echo '<td height="25"><b><a href="'.$PHP_SELF.'?listorder=id">'.$GLOBALS['strID'].'</a></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>';
 		echo "<td height='25' align='right'><b>".$GLOBALS['strViews']."</b></td>";
 		echo "<td height='25' align='right'><b>".$GLOBALS['strClicks']."</b></td>";
 		echo "<td height='25' align='right'><b>".$GLOBALS['strCTRShort']."</b>&nbsp;&nbsp;</td>";
