@@ -13,6 +13,10 @@ CVS			+ Added search capabilities  (Niels and Tobi Schulz)
                           to include personal contact information for example  (Niels)
 			+ Add secondary tab bar to the navigation  (Niels)
 
+			+ GUI
+			  - Added list order variants (ID or alphabetic) for administration and statistics of 
+			    clients, campaigns and banners (Stefan) 20011008
+
 			+ Zones
 			  - Added support for zones  (Niels)
 			  - Zones can be linked from the banner  (Niels) 20011007
